<resources>
    <string name="app_name">ComAutis</string>
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- Drawer items -->
    <string name="child_list">Liste des enfants</string>
    <string name="library">Bibliothèque</string>
    <string name="nav_drawer_opened">menu ouvert</string>
    <string name="nav_drawer_closed">menu fermé</string>

    <!-- Child List Activity and his dialog -->
    <string name="child_name_information">Prénom de l\'enfant</string>
    <string name="btn_alert_dialog">Ajouter une photo</string>
    <string name="tv_header_ad_add_child">Ajouter un nouvel enfant</string>
    <string name="btn_ad_positive">Ok</string>
    <string name="btn_ad_negative">Annuler</string>
    <string name="tv_header_ad_delete_child">Supprimer l\'enfant</string>
    <string name="advertising_ad_delete_child">La suppression d\'enfant supprime également les pages qui lui sont associés. Êtes-vous sur de vouloir continuer ?</string>

    <!-- Page List Activity and his dialog -->
    <string name="tv_header_add_page">Ajouter une nouvelle page</string>
    <string name="dialog_page_title">Titre de la page</string>
    <string name="dialog_delete_page_title">Supprimer la page</string>
    <string name="dialog_delete_page_ad">Êtes-vous sûr de vouloir supprimer cette page ?</string>




    <!-- Page List Activity and his dialog -->
    <string name="header_add_page">Ajouter une nouvelle page</string>
    <string name="page_name_information">Nom de la page</string>
    <string name="tv_header_ad_delete_page">Supprimer une page</string>
    <string name="advertising_ad_delete_page">La suppression d une page est irréversible. Etes-vous sur de vouloir continuer ?</string>

</resources>
